# selfie

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.gradle  gradle.properties  renovate.json  settings.gradle
.github/workflows/: ci.yml  csharp-ci.yml  gradle-wrapper-validation.yml  jvm-ci.yml  jvm-deploy.yml  jvm-publish-kdoc.yml  kotlin-ci.yml  kotlin-deploy.yml  kotlin-publish-kdoc.yml  publish-kdoc.yml  python-ci.yml  python-publish-doc.yml
docs/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
docs/public/: _redirects  sitemap.xml
docs/src/components/: Advanced.tsx  Button.tsx  ButtonList.tsx  Code.jsx  FooterCTA.tsx  GetStarted.tsx  HeadingAnchor.tsx  HeadingLanguageSelect.tsx  HeadingPopout.tsx  Hero.tsx  IntroText.tsx  Logo.tsx  Mascot.tsx  NavHeading.tsx  Selfie.tsx  mdx.tsx
docs/src/lib/: languageFromPath.ts
docs/src/mdx/: rehype.mjs
docs/src/pages/: 404.tsx  _app.tsx  _document.tsx  index.mdx  other-platforms.mdx
docs/src/styles/: tailwind.css
dotnet/: .editorconfig  Selfie.sln
dotnet/Selfie.Lib/: ArrayMap.cs  Class1.cs  Selfie.Lib.csproj  Selfie.cs
dotnet/Selfie.Lib.Tests/: ArrayMapTest.cs  Selfie.Lib.Tests.csproj
dotnet/Selfie.Lib.Tests/guts/: SliceTest.cs
dotnet/Selfie.Lib/guts/: Guts.cs.todo  Slice.cs
dotnet/Selfie.Runner.NUnit/: Selfie.Runner.NUnit.csproj
example-junit5/: README.md  build.gradle
gradle/: changelog.gradle  maven.gradle  spotless.gradle
gradle/dokka/: README.md  dokkatoo.gradle
gradle/dokka/scripts/: selfie.js
gradle/dokka/styles/: logo-styles.css  selfie-style.css
jvm/: .project  CHANGELOG.md  README.md  build.gradle  gradle.properties  settings.gradle
jvm/example-junit5/: .project  build.gradle
jvm/example-kotest/: .classpath  .project  build.gradle  build.gradle.kts
jvm/gradle/: jvm-target.gradle  spotless.gradle
jvm/gradle/dokka/: README.md  dokkatoo.gradle
jvm/selfie-lib/: .project  README.md  build.gradle
jvm/selfie-runner-junit4/: README.md  build.gradle
jvm/selfie-runner-junit5/: .classpath  .project  README.md  build.gradle
jvm/selfie-runner-kotest/: .project  README.md  build.gradle
jvm/undertest-junit-vintage/: .project  build.gradle
jvm/undertest-junit4/: build.gradle
jvm/undertest-junit5/: .classpath  .project  build.gradle
jvm/undertest-junit5-kotest/: .classpath  .project  build.gradle
jvm/undertest-junit5-kotest/harness/: README.md  build.gradle  gradle.properties  settings.gradle
jvm/undertest-kotest/: .project  build.gradle
kotlin/: settings.gradle
kotlin/gradle/: spotless.gradle
kotlin/undertest-junit5/: build.gradle
python/: CHANGELOG.md  Doxyfile  README.md  fullstack-pytest.code-workspace  package-lock.json  package.json
python/example-pytest-selfie/: README.md  app.py  conftest.py  dev-requirements.txt  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  uvproject.toml
python/example-pytest-selfie/example_pytest_selfie.egg-info/: PKG-INFO  SOURCES.txt
python/example-pytest-selfie/tests/: Simple_test.py  app_account_test.py  app_account_test.ss  binary_test.py  cache_selfie_test.py  cache_test.py  facets_test.py  facets_test.ss  get_started_test.py  homepage_test.py  selfie_settings.py  simple_comment_removal.py  simple_comment_removal_test.py  simple_inline_test.py  simple_ondisk.py  simple_ondisk_test.py  simple_ondisk_test.ss  to_be_file_test.py
python/pytest-selfie/: README.md  README.rst  dev-requirements.txt  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  tox.ini  uvproject.toml
python/pytest-selfie/docs/: index.md
python/pytest-selfie/pytest_selfie/: SelfieSettingsAPI.py  __init__.py  expectSelfie.py  hooks.py  plugin.py  replace_todo.py
python/pytest-selfie/src/pytest_pytest_selfie/: plugin.py
python/pytest-selfie/tests/: __init__.py  sanity_check.py  test_plugin.py  test_pytest_selfie.py
python/scripts/: run-lint.sh  run-tests.sh  run-typecheck.sh
python/selfie-lib/: README.md  dev-requirements.txt  pyproject.toml  uvproject.toml
python/selfie-lib/selfie_lib/: ArrayMap.py  Atomic.py  CacheSelfie.py  CacheSelfieBinary.py  CommentTracker.py  ConvertToWindowsNewlines.py  DiskStorage.py  EscapeLeadingWhitespace.py  FS.py  IllegalArgumentException.py  Lens.py  LineReader.py  Literals.py  Mode.py  ParseException.py  PerCharacterEscaper.py  RoundTrip.py  Roundtrip.py  RoundtripJson.py  Selfie.py  SelfieImplementations.py  Slice.py  Snapshot.py  SnapshotFile.py  SnapshotReader.py  SnapshotSystem.py  SnapshotValue.py  SnapshotValueReader.py  SourceFile.py  TodoStub.py  TypedPath.py  WithinTestGC.py  WriteTracker.py  __init__.py  edwin.py  harvir.py  ned.py  selina.py
python/selfie-lib/selfie_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/selfie-lib/selfie_lib/coroutines/: CacheSelfie.py  __init__.py
python/selfie-lib/tests/: ArrayMap_test.py  CompoundLens_test.py  EscapeLeadingWhitespace_test.py  LineReader_test.py  LiteralBoolean_test.py  LiteralInt_test.py  LiteralString_test.py  PerCharacterEscaper_test.py  RecordCall_test.py  RoundtripJson_test.py  Slice_test.py  SnapshotFile_test.py  SnapshotReader_test.py  SnapshotValueReader_test.py  Snapshot_test.py  SourceFile_test.py  TypedPath_test.py  edwin_test.py  harvir_test.py  lineReaderTest.py  ned_test.py  selina_test.py
python/selfie-lib/tests/coroutines/: test_CacheSelfie.py
python/selfie-runner-pytest/: pyproject.toml
selfie-lib/: README.md  build.gradle
selfie-runner-junit5/: README.md  build.gradle
selfie.dev/: README.md  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
selfie.dev/public/: _redirects  robots.txt  sitemap.xml
selfie.dev/src/components/: Button.tsx  ButtonList.tsx  DocsImage.tsx  HeadingAnchor.tsx  HeadingLanguageSelect.tsx  HeadingPopout.tsx  Hero.tsx  HeroDemoGif.tsx  HeroGifDemo.tsx  IntroText.tsx  Logo.tsx  Mascot.tsx  mdx.tsx  (+2 more)
snapshot-lib/: build.gradle
snapshot-runner-junit5/: build.gradle
undertest-junit-vintage/: build.gradle
undertest-junit5/: build.gradle
(+506 files in other folders)
