[tool.poetry]
name = "example-pytest-selfie"
version = "0.1.0"
description = "An example project for using the pytest plugin for selfie snapshot testing."
authors = ["Selina Delgado <sdelgado411@gmail.com>","Harvir Sahota <hsahota2312@gmail.com>","Ned Twigg <ned.twigg@diffplug.com>","Edwin Ye <EdwinYeDeveloper@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
flask = "^3.0.3"
openai = "^1.0.0"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.350"
pytest = "^8.0.0"
requests = "^2.32.3"
ruff = "^0.4.0"
selfie-lib = { path = "../selfie-lib", develop = true }
pytest-selfie = { path = "../pytest-selfie", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.extend-select = ["I"]