[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example-pytest-selfie"
version = "0.1.0"
description = "An example project for using the pytest plugin for selfie snapshot testing."
authors = [
    {name = "Selina Delgado", email = "sdelgado411@gmail.com"},
    {name = "Harvir Sahota", email = "hsahota2312@gmail.com"},
    {name = "Ned Twigg", email = "ned.twigg@diffplug.com"},
    {name = "Edwin Ye", email = "EdwinYeDeveloper@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"

[tool.ruff]
lint.extend-select = ["I"]
