[project]
name = "example-pytest-selfie"
version = "0.1.0"
description = "An example project for using the pytest plugin for selfie snapshot testing."
authors = [
  { name = "Edwin Ye", email = "EdwinYeDeveloper@gmail.com" },
  { name = "Harvir Sahota", email = "hsahota2312@gmail.com" },
  { name = "Ned Twigg", email = "ned.twigg@diffplug.com" },
  { name = "Selina Delgado", email = "sdelgado411@gmail.com"}
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.3",
]

[tool.uv.sources]
selfie-lib = { path = "../selfie-lib", editable = true }
pytest-selfie = { path = "../pytest-selfie", editable = true }

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.12.1",
    "openai>=1.0.0",
    "pyright>=1.1.350",
    "pytest-selfie>=0.1.0",
    "pytest>=8.0.0",
    "requests>=2.32.3",
    "ruff>=0.5.0",
    "selfie-lib>=0.1.0",
    "werkzeug>=3.0.3",
]

[tool.ruff]
lint.extend-select = ["I"]
