[project]
name = "pytest-selfie"
version = "0.1.0"
description = "A pytest plugin for selfie snapshot testing."
authors = [
    {name = "Selina Delgado", email = "sdelgado411@gmail.com"},
    {name = "Harvir Sahota", email = "hsahota2312@gmail.com"},
    {name = "Ned Twigg", email = "ned.twigg@diffplug.com"},
    {name = "Edwin Ye", email = "EdwinYeDeveloper@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0.0",
    "selfie-lib @ file:///home/ubuntu/repos/selfie/python/selfie-lib"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pyright>=1.1.350",
    "pytest>=8.0.0"
]

[project.entry-points.pytest11]
pytest_selfie = "pytest_selfie.plugin"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S", "FA", "PYI", "EM", "PLR", "FBT", "COM", "RET", "PTH", "PLW", "PLC",
"TRY", "ANN", "D", "N", "E501", "C901", "PLC0414", "W291", "PGH003", "ISC001"]
