[project]
name = "pytest-selfie"
version = "1.0.0"
description = "A pytest plugin for selfie snapshot testing."
authors = [
  { name = "Edwin Ye", email = "EdwinYeDeveloper@gmail.com" },
  { name = "Harvir Sahota", email = "hsahota2312@gmail.com" },
  { name = "Ned Twigg", email = "ned.twigg@diffplug.com" },
  { name = "Selina Delgado", email = "sdelgado411@gmail.com"}
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0.0",
    "selfie-lib"
]

[tool.uv.sources]
selfie-lib = { path = "../selfie-lib", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.350",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.entry-points.pytest11]
pytest_selfie = "pytest_selfie.plugin"

[tool.ruff.lint]
select = ["ALL"]
ignore = [ "S", "FA",  "PYI", "EM", "PLR",  "FBT", "COM", "RET", "PTH", "PLW", "PLC",
"TRY", # TODO: exception standards
"ANN", # TODO: require type annotations
"D", # TODO: docstring warnings
"N", # TODO: naming conventions
"E501", # line too long
"C901", # function to complex
"PLC0414", # import alias does not rename original package
"W291", # trailing whitespace, we need it for testing snapshots
"PGH003", # specific rule codes when ignoring type issues
"ISC001"
]
