[project]
name = "selfie-lib"
version = "0.1.0"
description = "A snapshot testing library for Python"
authors = [
    {name = "Selina Delgado", email = "sdelgado411@gmail.com"},
    {name = "Harvir Sahota", email = "hsahota2312@gmail.com"},
    {name = "Ned Twigg", email = "ned.twigg@diffplug.com"},
    {name = "Edwin Ye", email = "EdwinYeDeveloper@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pyright>=1.1.350",
    "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S", "FA", "PYI", "EM", "PLR", "FBT", "COM", "RET", "PTH", "PLW", "PLC",
"TRY", "ANN", "D", "N", "E501", "C901", "PLC0414", "W291", "PGH003", "ISC001"]
